Bug 240627 Add warnings for some reserved key shortcuts r=bryner sr=bz